--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 footer {
-  background-color: #343a40;
+  background-color: #265C7E;
   color: #fff;
   display: flex;
   align-items: flex-start;
@@ -32,7 +32,7 @@ footer a {
 }
 
 .wave {
-  background: linear-gradient(to left, #00c6ff, #265C7E);
+  background: linear-gradient(to left, #00c6ff, #43A2DE);
   min-height: 350px;
   color: #fff;
   display: flex;
@@ -86,7 +86,7 @@ footer a {
 }
 
 .container-dark {
-  background-color: #343a40;
+  background-color: #45B245;
 }
 
 .card-title {
@@ -158,7 +158,7 @@ footer a {
 	 content: "";
 	 width: 3px;
 	 height: 100%;
-	 background: #328eff;
+	 background: #265C7E;
 	 left: 50%;
 	 top: 0;
 	 position: absolute;
