--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -32,7 +32,7 @@ footer a {
 }
 
 .wave {
-  background: linear-gradient(to left, #00c6ff, #43A2DE);
+  background: linear-gradient(to left, #265C7E, #0DFBCB);
   min-height: 350px;
   color: #fff;
   display: flex;
