--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -32,7 +32,7 @@ footer a {
 }
 
 .wave {
-  background: linear-gradient(to left, #265C7E, #0DFBCB);
+  background: linear-gradient(to left, #265C7E, #3888BA);
   min-height: 350px;
   color: #fff;
   display: flex;
@@ -158,7 +158,7 @@ footer a {
 	 content: "";
 	 width: 3px;
 	 height: 100%;
-	 background: #265C7E;
+	 background: #FBD658;
 	 left: 50%;
 	 top: 0;
 	 position: absolute;
@@ -174,7 +174,7 @@ footer a {
 	 position: relative;
 }
  #timeline .timeline-item .timeline-icon {
-	 background: #265C7E;
+	 background: #FBD658;
 	 width: 50px;
 	 height: 50px;
 	 position: absolute;
@@ -214,7 +214,7 @@ footer a {
 	 height: 0;
 	 border-top: 7px solid transparent;
 	 border-bottom: 7px solid transparent;
-	 border-left: 7px solid #265C7E;
+	 border-left: 7px solid #FBD658;
 }
  #timeline .timeline-item .timeline-content.right {
 	 float: right;
@@ -224,10 +224,10 @@ footer a {
 	 right: 45%;
 	 left: inherit;
 	 border-left: 0;
-	 border-right: 7px solid #265C7E;
+	 border-right: 7px solid #FBD658;
 }
  .btn {
-	 background-color: #FBD658;
+	 background-color: #E9363C;
    border: 2px solid #265C7E;
    color: #fff;
    border-radius: 0;
