--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -32,7 +32,7 @@ footer a {
 }
 
 .wave {
-  background: linear-gradient(to left, #265C7E, #3888BA);
+  background: linear-gradient(to left, #0C3364, #A1C0D4);
   min-height: 350px;
   color: #fff;
   display: flex;
@@ -86,7 +86,7 @@ footer a {
 }
 
 .container-dark {
-  background-color: #45B245;
+  background-color: #0C3363;
 }
 
 .card-title {
