--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 footer {
-  background-color: #265C7E;
+  background-color: #0C7FAB;
   color: #fff;
   display: flex;
   align-items: flex-start;
@@ -32,7 +32,7 @@ footer a {
 }
 
 .wave {
-  background: linear-gradient(to left, #A1C0D4, #0C3364);
+  background: linear-gradient(to left, #569ABF, #0C7EAC);
   min-height: 350px;
   color: #fff;
   display: flex;
