--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -251,7 +251,7 @@ footer a {
 		 left: 10%;
 		 margin-left: -6px;
 		 border-left: 0;
-		 border-right: 7px solid #E9363C;
+		 border-right: 7px solid #563116;
 	}
 	 #timeline .timeline-item .timeline-icon {
 		 left: 0;
