--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -32,7 +32,7 @@ footer a {
 }
 
 .wave {
-  background: linear-gradient(to left, #569ABF, #0C7EAC);
+  background: linear-gradient(to left, #0C7FAB, #0B3364);
   min-height: 350px;
   color: #fff;
   display: flex;
