--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,7 +4,7 @@ html, body {
 
 h1 {
   font-size:3em;
-  font-family: 'Futara PT Extra Bold', sans-serif;
+  font-family: 'Futara', sans-serif;
   font-weight: 300;
 }
 
