--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -196,7 +196,7 @@ footer a {
 }
  #timeline .timeline-item .timeline-content h2 {
 	 padding: 15px;
-	 background: #563116;
+	 background: #9A582B;
 	 color: #fff;
 	 margin: -20px -20px 0 -20px;
 	 font-weight: 300;
