--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -91,7 +91,7 @@ footer a {
 
 .card-title {
   margin-top: 50px;
-  color: #6B6CAD;
+  color: #3F2D7E;
   text-align: center;
 }
 
@@ -100,7 +100,7 @@ footer a {
 }
 
 .card-icon{
-  color: #6B6CAD;
+  color: #3F2D7D;
   font-size: 50px;
 }
 
