--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -103,7 +103,7 @@ footer a {
 
 .card-title {
   margin-top: 50px;
-  color: #344319;
+  color: #0C3263;
   text-align: center;
 }
 
@@ -112,7 +112,7 @@ footer a {
 }
 
 .card-icon{
-  color: #344319;
+  color: #0C3263;
   font-size: 50px;
 }
 
