--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,29 +1,35 @@
 html, body {
-  font-family: 'Futara', sans-serif;
+  font-family: Futura,Trebuchet MS,Arial,sans-serif;
 }
 
 h1 {
-  font-size:3em;
-  font-family: 'Futara', sans-serif;
+  font-size:1em;
+  font-family: Futura,Trebuchet MS,Arial,sans-serif;
+  font-weight: 500;
+}
+
+h2 {
+  font-size:2em;
+  font-family: Futura,Trebuchet MS,Arial,sans-serif;
   font-weight: 500;
 }
 
 h3 {
-  font-size:2em;
-  font-family: 'Futara', sans-serif;
+  font-size:1em;
+  font-family: Futura,Trebuchet MS,Arial,sans-serif;
   font-weight: 300;
 }
 
 .name {
-  font-size:4em;
-  font-family: 'Futara Condensed', sans-serif;
-  font-weight: 800;
+  font-size:3em;
+  font-family: Futura,Trebuchet MS,Arial,sans-serif;
+  font-weight: 600;
 }
 
 .title {
   font-size: 2em;
-  font-family: 'Futara', sans-serif;
-  font-weight: 4em;
+  font-family: Futura,Trebuchet MS,Arial,sans-serif;
+  font-weight: 700;
 }
 
 footer {
@@ -44,7 +50,7 @@ footer a {
 }
 
 .wave {
-  background: linear-gradient(to left, #0C7FAB, #0B3364);
+  background: linear-gradient(to left, #0C7FAB, #0C7FAB);
   min-height: 350px;
   color: #fff;
   display: flex;
@@ -103,7 +109,8 @@ footer a {
 
 .card-title {
   margin-top: 50px;
-  font-size: 1.5em;
+  font-size: 2em;
+  font-weight: 600;
   color: #0C3263;
   text-align: center;
 }
@@ -171,7 +178,7 @@ footer a {
 	 content: "";
 	 width: 3px;
 	 height: 100%;
-	 background: #F0B021;
+	 background: #553116;
 	 left: 50%;
 	 top: 0;
 	 position: absolute;
@@ -187,7 +194,7 @@ footer a {
 	 position: relative;
 }
  #timeline .timeline-item .timeline-icon {
-	 background: #F0B021;
+	 background: #F0AF20;
 	 width: 50px;
 	 height: 50px;
 	 position: absolute;
@@ -209,7 +216,7 @@ footer a {
 }
  #timeline .timeline-item .timeline-content h2 {
 	 padding: 15px;
-	 background: #9A582B;
+	 background: #0C534E;
 	 color: #fff;
 	 margin: -20px -20px 0 -20px;
 	 font-weight: 300;
@@ -227,7 +234,7 @@ footer a {
 	 height: 0;
 	 border-top: 7px solid transparent;
 	 border-bottom: 7px solid transparent;
-	 border-left: 7px solid #F0B021;
+	 border-left: 7px solid #0C534E;
 }
  #timeline .timeline-item .timeline-content.right {
 	 float: right;
@@ -237,10 +244,10 @@ footer a {
 	 right: 45%;
 	 left: inherit;
 	 border-left: 0;
-	 border-right: 7px solid #F0B021;
+	 border-right: 7px solid #0C534E;
 }
  .btn {
-	 background-color: #E86D3C;
+	 background-color: #E96E3D;
    border: 2px solid #732D0D;
    color: #fff;
    border-radius: 0;
@@ -314,7 +321,7 @@ footer a {
 
 .modal-title {
   font-weight: 300;
-  font-size: 2em;
+  font-size: 1em;
   color: #fff;
   line-height: 30px;
 }
