--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -111,7 +111,7 @@ footer a {
   margin-top: 50px;
   font-size: 2em;
   font-weight: 600;
-  color: #0C3263;
+  color: #000000;
   text-align: center;
 }
 
@@ -120,12 +120,13 @@ footer a {
 }
 
 .card-icon{
-  color: #0C3263;
+  color: #000000;
   font-size: 50px;
 }
 
 .subtitle {
     font-weight: 200;
+    font-size: x-large;
 }
 .boy {
     display: block;
