--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -33,7 +33,7 @@ h3 {
 }
 
 footer {
-  background-color: #0C7FAB;
+  background-color: #0B514D;
   color: #fff;
   display: flex;
   align-items: flex-start;
@@ -50,7 +50,7 @@ footer a {
 }
 
 .wave {
-  background: linear-gradient(to left, #0C7FAB, #0C7FAB);
+  background: linear-gradient(to left, #0B514D, #0B514D);
   min-height: 350px;
   color: #fff;
   display: flex;
@@ -73,7 +73,7 @@ footer a {
 }
 
 .custom-card {
-  transform: translateY(-150px);
+  transform: translateY(-50px);
   text-align: center;
   width:500px;
   max-width: 90%;
@@ -100,11 +100,11 @@ footer a {
 }
 
 .container-color {
-  background-color: #0C7FAB;
+  background-color: #0B514D;
 }
 
 .container-dark {
-  background-color: #0C3364;
+  background-color: #031A18;
 }
 
 .card-title {
@@ -179,7 +179,7 @@ footer a {
 	 content: "";
 	 width: 3px;
 	 height: 100%;
-	 background: #553116;
+	 background: #F7CB83;
 	 left: 50%;
 	 top: 0;
 	 position: absolute;
@@ -207,6 +207,9 @@ footer a {
 }
  #timeline .timeline-item .timeline-icon {
 	 display:flex;
+}
+#timeline .timeline-item .timeline-icon {
+  display:flex;
 }
  #timeline .timeline-item .timeline-content {
 	 width: 45%;
@@ -248,8 +251,8 @@ footer a {
 	 border-right: 7px solid #0C534E;
 }
  .btn {
-	 background-color: #E96E3D;
-   border: 2px solid #732D0D;
+	 background-color: #D78224;
+   border: 2px solid #99592B;
    color: #fff;
    border-radius: 0;
 
