--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -225,6 +225,7 @@ footer a {
 	 padding: 20px;
 	 border-radius: 0;
 	 transition: all 0.3s ease;
+	 font-size: Large;
 }
  #timeline .timeline-item .timeline-content h2 {
 	 padding: 15px;
