--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,6 +2,8 @@ html, body {
   font-family: Futura,Trebuchet MS,Arial,sans-serif;
 }
 
+
+
 h1 {
   font-size:1em;
   font-family: Futura,Trebuchet MS,Arial,sans-serif;
@@ -47,6 +49,15 @@ footer a {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+.random-proj {
+  background: #0C534E;
+  color: #f1f3f5;
+  font-size: 3em;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .wave {
@@ -132,7 +143,7 @@ footer a {
 .boy {
     display: block;
     height: 200px;
-    margin-top: 50px;
+    margin-top: 0px;
 }
 
 .school {
@@ -225,7 +236,7 @@ footer a {
 	 padding: 20px;
 	 border-radius: 0;
 	 transition: all 0.3s ease;
-	 font-size: Large;
+   font-size: Large;
 }
  #timeline .timeline-item .timeline-content h2 {
 	 padding: 15px;
