--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,7 +2,28 @@ html, body {
   font-family: Futura,Trebuchet MS,Arial,sans-serif;
 }
 
+.stretch {
+  width: 100%;
+  display: inline-block;
+  font-size: 0;
+  line-height: 0,
+}
 
+/* Create four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 20px;
+  height: auto;
+   /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
 h1 {
   font-size:1em;
