--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -55,6 +55,13 @@ h3 {
   font-weight: 700;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
 footer {
   background-color: #0B514D;
   color: #fff;
